--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,11 @@ edition = "2018"
 
 [dependencies]
 byteorder = { version = "1", optional = true, default-features = false }
-ff = { version = "0.11", default-features = false }
+ff = { git = "https://github.com/davidrusu/ff", branch="switch-to-subtle-ng" } # version = "0.11", default-features = false }
 rand = { version = "0.8", optional = true, default-features = false }
 rand_core = { version = "0.6", default-features = false }
 rand_xorshift = { version = "0.3", optional = true }
-subtle = { version = "2.2.1", default-features = false }
+subtle = { package = "subtle-ng", version = "2.4", default-features = false }
 
 [features]
 default = ["alloc"]
